docs/v1.15.11/en/installation.mdx
---
title: Installation
description: Get started with CrewAI - Install, configure, and build your first AI crew
icon: wrench
mode: "wide"
---

<div
  style={{
    display: "flex",
    flexDirection: "column",
    gap: 18,
    padding: "24px",
    marginBottom: 32,
    borderRadius: 12,
    border: "1px solid rgba(235,102,88,0.28)",
    background: "linear-gradient(180deg, rgba(235,102,88,0.14) 0%, rgba(235,102,88,0.06) 100%)"
  }}
>
  <div>
    <p style={{ margin: 0, color: "#EB6658", fontSize: 13, fontWeight: 700, textTransform: "uppercase" }}>
      Coding agent setup
    </p>
    <h2 style={{ margin: "6px 0 8px" }}>Set up CrewAI in your coding agent</h2>
    <p style={{ margin: 0, color: "var(--mint-text-2)", maxWidth: 760 }}>
      Copy a ready-to-paste setup prompt for Claude Code, Codex, Cursor, or any coding agent. It installs the official CrewAI skills, checks the CLI, and points the agent at the right docs before it edits code.
    </p>
  </div>

  <div style={{ display: "flex", flexWrap: "wrap", gap: 12, alignItems: "center" }}>
    <button
      type="button"
      style={{
        display: "inline-flex",
        alignItems: "center",
        justifyContent: "center",
        minHeight: 42,
        padding: "0 16px",
        borderRadius: 8,
        border: "1px solid #EB6658",
        background: "#EB6658",
        color: "#FFFFFF",
        fontSize: 15,
        fontWeight: 700,
        lineHeight: 1,
        cursor: "pointer",
        boxShadow: "0 10px 24px rgba(235,102,88,0.22)"
      }}
      onClick={async (event) => {
        const prompt = `Set up this environment so I can build with CrewAI.

First install the official CrewAI coding-agent skills if this environment supports npx:

npx skills add crewaiinc/skills

If npx is missing or the current agent cannot load skills, do not fail the whole setup. Report the exact issue and continue using the CrewAI docs directly.

Use these CrewAI docs as source of truth before making assumptions:
- https://skills.crewai.com
- https://docs.crewai.com/llms.txt
- https://docs.crewai.com/en/installation
- https://docs.crewai.com/en/guides/coding-tools/build-with-ai

Setup steps:
1. Check python3 --version. CrewAI requires Python >=3.10 and <3.14.
2. Install uv if missing:
   curl -LsSf https://astral.sh/uv/install.sh | sh
3. Source the uv environment if needed:
   source "$HOME/.local/bin/env"
4. Install the CrewAI CLI:
   uv tool install crewai
5. Verify the CLI:
   crewai version
   crewai create --help
6. Create a project:
   CREWAI_DMN=true crewai create
7. After project creation, inspect the generated files before editing.
8. Run:
   crewai install
   crewai run

Do not hardcode API keys. Use .env.
Do not invent CLI flags. Validate with crewai --help or crewai create --help.
If a command fails, show the exact command and error, explain the likely cause, fix what you can safely fix, and retry once.`;
        const button = event.currentTarget;
        const resetTimeout = button.dataset.resetTimeout;
        if (resetTimeout) {
          window.clearTimeout(Number(resetTimeout));
        }
        try {
          await navigator.clipboard.writeText(prompt);
          button.textContent = "Copied";
        } catch {
          button.textContent = "Copy failed";
        } finally {
          button.dataset.resetTimeout = String(window.setTimeout(() => {
            button.textContent = "Copy agent setup prompt";
            delete button.dataset.resetTimeout;
          }, 1600));
        }
      }}
    >
      Copy agent setup prompt
    </button>
    <a
      href="/en/guides/coding-tools/build-with-ai"
      style={{
        display: "inline-flex",
        alignItems: "center",
        justifyContent: "center",
        minHeight: 42,
        padding: "0 16px",
        borderRadius: 8,
        border: "1px solid rgba(235,102,88,0.36)",
        color: "#EB6658",
        fontSize: 15,
        fontWeight: 700,
        lineHeight: 1,
        textDecoration: "none"
      }}
    >
      View coding-agent guide
    </a>
  </div>
</div>

### Watch: Building CrewAI Agents & Flows with Coding Agent Skills

<iframe src="https://www.loom.com/embed/befb9f68b81f42ad8112bfdd95a780af" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style={{width: "100%", height: "400px"}}></iframe>

## Video Tutorial

Watch this video tutorial for a step-by-step demonstration of the installation process:

<iframe
  className="w-full aspect-video rounded-xl"
  src="https://www.youtube.com/embed/-kSOTtYzgEw"
  title="CrewAI Installation Guide"
  frameBorder="0"
  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
  allowFullScreen
></iframe>

## Text Tutorial

<Note>
  **Python Version Requirements**

CrewAI requires `Python >=3.10 and <3.14`. Here's how to check your version:

```bash
python3 --version
```

If you need to update Python, visit [python.org/downloads](https://python.org/downloads)

</Note>

<Note>
  **OpenAI SDK Requirement**

CrewAI 0.175.0 requires `openai >= 1.13.3`. If you manage dependencies yourself, ensure your environment satisfies this constraint to avoid import/runtime issues.

</Note>

CrewAI uses the `uv` as its dependency management and package handling tool. It simplifies project setup and execution, offering a seamless experience.

If you haven't installed `uv` yet, follow **step 1** to quickly get it set up on your system, else you can skip to **step 2**.

<Steps>
    <Step title="Install uv">
      - **On macOS/Linux:**

        Use `curl` to download the script and execute it with `sh`:

        ```shell
        curl -LsSf https://astral.sh/uv/install.sh | sh
        ```
        If your system doesn't have `curl`, you can use `wget`:

        ```shell
        wget -qO- https://astral.sh/uv/install.sh | sh
        ```

      - **On Windows:**

        Use `irm` to download the script and `iex` to execute it:

        ```shell
        powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
        ```
        If you run into any issues, refer to [UV's installation guide](https://docs.astral.sh/uv/getting-started/installation/) for more information.
    </Step>

    <Step title="Install CrewAI 🚀">
      - Run the following command to install `crewai` CLI:
        ```shell
        uv tool install crewai
        ```
          <Warning>
            If you encounter a `PATH` warning, run this command to update your shell:
            ```shell
            uv tool update-shell
            ```
          </Warning>

          <Warning>
            If you encounter the `chroma-hnswlib==0.7.6` build error (`fatal error C1083: Cannot open include file: 'float.h'`) on Windows, install [Visual Studio Build Tools](https://visualstudio.microsoft.com/downloads/) with *Desktop development with C++*.
          </Warning>

      - To verify that `crewai` is installed, run:
        ```shell
        uv tool list
        ```
      - You should see something like:
        ```shell
        crewai v0.102.0
        - crewai
        ```
      - If you need to update `crewai`, run:
        ```shell
        uv tool install crewai --upgrade
        ```
      <Note>
        This upgrades the **global `crewai` CLI tool** only. To upgrade the `crewai` version inside your project's virtual environment, see [Upgrading CrewAI in a project](/en/guides/migration/upgrading-crewai).
      </Note>
      <Check>Installation successful! You're ready to create your first crew! 🎉</Check>
    </Step>

</Steps>

# Creating a CrewAI Project

`crewai create crew` now creates a JSON-first crew project. Agents live in `agents/*.jsonc`, tasks and crew-level settings live in `crew.jsonc`, and `crewai run` loads that JSON definition directly.

<Steps>
  <Step title="Generate Project Scaffolding">
    - Run the `crewai` CLI command:
      ```shell
      crewai create crew <your_project_name>
      ```

    - This creates a new project with the following structure:
      ```
      my_project/
      ├── .gitignore
      ├── .env
      ├── agents/
      │   └── researcher.jsonc
      ├── crew.jsonc
      ├── knowledge/
      ├── pyproject.toml
      ├── README.md
      ├── skills/
      └── tools/
      ```

    - If you need the older Python/YAML scaffold with `crew.py`, `config/agents.yaml`, and `config/tasks.yaml`, run:
      ```shell
      crewai create crew <your_project_name> --classic
      ```

  </Step>

  <Step title="Customize Your Project">
    - Your project will contain these essential files:
      | File | Purpose |
      | --- | --- |
      | `crew.jsonc` | Configure the crew, task order, process, and input defaults |
      | `agents/*.jsonc` | Define each agent's role, goal, backstory, LLM, tools, and behavior |
      | `.env` | Store API keys and environment variables |
      | `tools/` | Optional Python files for `custom:<name>` tools |
      | `knowledge/` | Optional knowledge files for agents |
      | `skills/` | Optional skill files applied to the crew |

    - Start by editing `crew.jsonc` and the files in `agents/` to define your crew's behavior.
    - Use `{placeholder}` values in agent and task text, then set defaults in `crew.jsonc` under `inputs`. When you run `crewai run`, the CLI prompts for any missing values.
    - Keep sensitive information like API keys in `.env`.

  </Step>

  <Step title="Run your Crew">
    - Before you run your crew, make sure to run:
      ```bash
      crewai install
      ```
    - If you need to install additional packages, use:
      ```shell
      uv add <package-name>
      ```
      <Note>
        As a supply-chain security measure, CrewAI's internal packages use `exclude-newer = "3 days"` in their `pyproject.toml` files. This means transitive dependencies pulled in by CrewAI won't resolve packages released less than 3 days ago. Your own direct dependencies are not affected by this policy. If you notice a transitive dependency is behind, you can pin the version you want explicitly in your project's dependencies.
      </Note>
    - To run your crew, execute the following command in the root of your project:
      ```bash
      crewai run
      ```
  </Step>
</Steps>

## Enterprise Installation Options

<Note type="info">
For teams and organizations, CrewAI offers enterprise deployment options that eliminate setup complexity:

### CrewAI AMP (SaaS)

- Zero installation required - just sign up for free at [app.crewai.com](https://app.crewai.com)
- Automatic updates and maintenance
- Managed infrastructure and scaling
- Build Crews with no Code

### CrewAI Factory (Self-hosted)

- Containerized deployment for your infrastructure
- Supports any hyperscaler including on prem deployments
- Integration with your existing security systems

<Card title="Explore Enterprise Options" icon="building" href="https://share.hsforms.com/1Ooo2UViKQ22UOzdr7i77iwr87kg">
  Learn about CrewAI's enterprise offerings and schedule a demo
</Card>
</Note>

## Next Steps

<CardGroup cols={2}>
  <Card title="Quickstart: Flow + agent" icon="code" href="/en/quickstart">
    Follow the quickstart to scaffold a Flow, run a one-agent crew, and produce a report.
  </Card>
  <Card
    title="Join the Community"
    icon="comments"
    href="https://community.crewai.com"
  >
    Connect with other developers, get help, and share your CrewAI experiences.
  </Card>
</CardGroup>
